# learning_github_releases

./: Cargo.toml  README.md
.github/workflows/: release.yml
wix/: main.wxs
